# Dynamixel_basic_controller

./: README.md  package.xml  setup.cfg  setup.py
dynamixel_test_ctrl/: dynamixel_gui_node.py  dynamixel_master_node.py
launch/: main.launch.py
