<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_test_ctrl</name>
  <version>0.1.0</version>
  <description>Package for controlling Dynamixel motors via ROS2 and GUI</description>

  <maintainer email="kyj@example.com">kyj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>